tests/types/errors/invalid_cast_str_to_i32.expr
str label = "123";
i32 n = label as i32;
